--- a/app/style/index.less
+++ b/app/style/index.less
@@ -70,3 +70,9 @@ body,
   background-color: #555;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
+
+.anticon {
+  &:before {
+    font-display: block;
+  }
+}
