style(eslint): reconfig eslint rule, integrate with prettier

--- a/src/component/Header/style.m.less
+++ b/src/component/Header/style.m.less
@@ -26,8 +26,8 @@
     margin-left: 1em;
   }
 }
-.lang {
-  width: 6em;
+.langSelect {
+  min-width: 6em;
   margin-right: 1em;
 }
 
@@ -45,6 +45,7 @@
     }
   }
 }
+
 @keyframes logo {
   from,
   20%,
