--- a/src/style/index.less
+++ b/src/style/index.less
@@ -76,3 +76,12 @@ body,
     font-display: block;
   }
 }
+
+.link-button {
+  display: inline;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
