--- a/src/component/Header/style.m.less
+++ b/src/component/Header/style.m.less
@@ -1,3 +1,5 @@
+@import '../../style/variable.less';
+
 .header {
   display: flex;
   // position: fixed;
@@ -25,7 +27,11 @@
   a {
     margin-left: 1em;
   }
+  [role='switch'] {
+    margin-right: 2em;
+  }
 }
+
 .langSelect {
   min-width: 6em;
   margin-right: 1em;
