feat: use puppeteer-core replace puppeteer
add e2e puppeteer readme
add change theme readme
change header logo anim
remove some useless package

--- a/src/component/Header/style.m.less
+++ b/src/component/Header/style.m.less
@@ -28,13 +28,13 @@
     margin-left: 1em;
   }
   [role='switch'] {
-    margin-right: 2em;
+    margin-right: 1em;
   }
 }
 
 .langSelect {
   min-width: 6em;
-  margin-right: 1em;
+  margin-right: 1em !important;
 }
 
 .logo {
@@ -47,45 +47,29 @@
     margin-right: 1em;
     margin-left: -0.6em;
     &:hover {
-      animation: logo 1s 1s infinite;
+      animation: logo 2s 1s infinite;
     }
   }
 }
 
 @keyframes logo {
-  from,
-  20%,
-  40%,
-  60%,
-  80%,
-  to {
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-
   0% {
-    transform: scale3d(0.3, 0.3, 0.3);
-    opacity: 0;
+    transform: rotateX(0) rotateY(0);
   }
 
-  20% {
-    transform: scale3d(1.1, 1.1, 1.1);
+  25% {
+    transform: rotateX(180deg) rotateY(0);
   }
 
-  40% {
-    transform: scale3d(0.9, 0.9, 0.9);
+  50% {
+    transform: rotateX(180deg) rotateY(180deg);
   }
 
-  60% {
-    transform: scale3d(1.03, 1.03, 1.03);
-    opacity: 1;
+  75% {
+    transform: rotateX(0deg) rotateY(180deg);
   }
 
-  80% {
-    transform: scale3d(0.97, 0.97, 0.97);
-  }
-
-  to {
-    transform: scale3d(1, 1, 1);
-    opacity: 1;
+  100% {
+    transform: rotateX(0deg) rotateY(0deg);
   }
 }
