--- a/src/component/Loading/style.m.less
+++ b/src/component/Loading/style.m.less
@@ -1,5 +1,5 @@
 // copy from spinkit
-@import '~antd/lib/style/themes/default.less';
+@import 'style/variable.less';
 @spinkit-spinner-margin: 40px auto;
 @spinkit-size: 40px;
 
